--- a/src/app/view/forgot-password/forgot-password.component.html
+++ b/src/app/view/forgot-password/forgot-password.component.html
@@ -1,14 +1,10 @@
 <div class="forgot-password-container">
   <div class="forgot-password-background">
-    <img class="forgot-password-background-image" src="/assets/sports-background.jpeg" alt="Fondo de Deportes">
+    <img class="forgot-password-background-image" src="/assets/fondo/IMG_9792.JPG" alt="Fondo de Deportes">
   </div>
-  <div class="forgot-password-logo-container">
-    <img class="forgot-password-logo" src="assets/apolloLogo.png" alt="APOLLO GROUP Logo" />
-    <div class="forgot-password-logo-text">
-      <div class="forgot-password-logo-title">APOLLO GROUP</div>
-      <div class="forgot-password-logo-subtitle">Academia deportiva</div>
-    </div>
-  </div>
+  <!--<div class="forgot-password-logo-container">
+    <img class="forgot-password-logo" src="assets/logo/logo_1.png" alt="APOLLO GROUP Logo" />
+  </div>-->
   <div class="forgot-password-card-container">
     <div class="forgot-password-card">
       <div class="forgot-password-header">
@@ -32,7 +28,10 @@
         <button class="forgot-password-button forgot-password-button-primary" mat-raised-button type="submit"
           [disabled]="!forgotPasswordForm.valid || isLoading">
           <span *ngIf="!isLoading">Enviar</span>
-          <span *ngIf="isLoading">Enviando...</span>
+          <span *ngIf="isLoading">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Enviando...
+          </span>
         </button>
       </form>
       <div class="forgot-password-info">
